# unicorn

./: .gitignore  .gitmodules  .releaserc.yml  CONTRIBUTE.md  Cargo.toml  LICENSE  README.md  a.m  exp_cnf_gen.sh  exp_mul_gen.sh  exp_not_gen.sh  exp_qubo_gen.sh  exp_sat_ratio.sh  out.txt  output.txt  pyproject.toml  riscv.txt  temp.txt
.cargo-husky/hooks/: commit-msg  pre-commit  prepare-commit-msg
.github/: dependabot.yml  renovate.json
.github/workflows/: benchmark.yml  book.yml  release.yml  security-audit.yml  test.yml
benches/: engine.rs  path_exploration.rs  rarity.rs
book/: book.toml
book/src/: SUMMARY.md  concept_1.md
btor2_files/16bit/: add.btor2  and.btor2  div.btor2  eq.btor2  ite.btor2  mul.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/24bit/: add.btor2  and.btor2  div.btor2  eq.btor2  ite.btor2  mul.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/32bit/: add.btor2  and.btor2  div.btor2  eq.btor2  ite.btor2  mul.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/40bit/: add.btor2  and.btor2  div.btor2  eq.btor2  ite.btor2  mul.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/48bit/: add.btor2  and.btor2  div.btor2  eq.btor2  ite.btor2  mul.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/56bit/: add.btor2  and.btor2  div.btor2  eq.btor2  ite.btor2  mul.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/64bit/: add.btor2  and.btor2  div.btor2  eq.btor2  ite.btor2  mul.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/8bit/: add.btor2  and.btor2  div.btor2  ite.btor2  not.btor2  rem.btor2  sub.btor2  ult.btor2
btor2_files/cnfs/: 16_add.cnf  16_and.cnf  16_div.cnf  16_eq.cnf  16_ite.cnf  16_mul.cnf  16_not.cnf  16_rem.cnf  16_sub.cnf  16_ult.cnf  24_add.cnf  24_and.cnf  24_div.cnf  24_eq.cnf  24_ite.cnf  24_mul.cnf  24_not.cnf  24_rem.cnf  24_sub.cnf  24_ult.cnf  32_add.cnf  32_and.cnf  32_div.cnf  32_eq.cnf  32_ite.cnf  32_mul.cnf  32_not.cnf  32_rem.cnf  32_sub.cnf  32_ult.cnf  40_add.cnf  40_and.cnf  40_div.cnf  40_eq.cnf  40_ite.cnf  40_mul.cnf  40_not.cnf  40_rem.cnf  40_sub.cnf  40_ult.cnf  (+40 more)
btor2_files/mul_experiments/: 0.btor2  1.btor2  10.btor2  100.btor2  101.btor2  102.btor2  103.btor2  104.btor2  105.btor2  106.btor2  107.btor2  108.btor2  109.btor2  11.btor2  110.btor2  111.btor2  112.btor2  113.btor2  114.btor2  115.btor2  116.btor2  117.btor2  118.btor2  119.btor2  12.btor2  120.btor2  121.btor2  122.btor2  123.btor2  124.btor2  125.btor2  126.btor2  127.btor2  128.btor2  129.btor2  13.btor2  130.btor2  131.btor2  132.btor2  133.btor2  (+216 more)
btor2_files/qubos/: 16_add.unicorn  16_and.unicorn  16_div.unicorn  16_eq.unicorn  16_ite.unicorn  16_mul.unicorn  16_not.unicorn  16_rem.unicorn  16_sub.unicorn  16_ult.unicorn  24_add.unicorn  24_and.unicorn  24_div.unicorn  24_eq.unicorn  24_ite.unicorn  24_mul.unicorn  24_not.unicorn  24_rem.unicorn  24_sub.unicorn  24_ult.unicorn  32_add.unicorn  32_and.unicorn  32_div.unicorn  32_eq.unicorn  32_ite.unicorn  32_mul.unicorn  32_not.unicorn  32_rem.unicorn  32_sub.unicorn  32_ult.unicorn  40_add.unicorn  40_and.unicorn  40_div.unicorn  40_eq.unicorn  40_ite.unicorn  40_mul.unicorn  40_not.unicorn  40_rem.unicorn  40_sub.unicorn  40_ult.unicorn  (+39 more)
btor2_files/sat_ratio_experiments/: 1.btor2  p000001.btor2  p00001.btor2  p0001.btor2  p001.btor2  p01.btor2  p1.btor2  p10.btor2  p100.btor2  p1p.btor2  p25.btor2  p5.btor2  p50.btor2  p75.btor2
examples/: Cargo.toml  addOverflow.c  arithmetic.c  count_up_down-1.c  demonstration.c  division-by-input.c  division-by-zero-3-35.c  division-by-zero-3-35.rs  echo-line.c  eight-byte-input.c  endless-loop.c  if-else.c  if-simple.c  invalid-memory-access-2-35.c  long-loop-fixed.c  long-loop-single.c  long-loop-triple.c  main-return-1.c  main-return-2.c  memory-access-1-35.c  memory-access.c  memory-invalid-read.c  memory-invalid-write.c  memory-uninitialized-write.c  mulOverflow.c  multiple-read.c  nested-if-else-1-35.c  nested-if-else-reverse-1-35.c  nested-if-else.c  nested-recursion-1-35.c  read-failure.c  recursive-ackermann-1-35.c  recursive-factorial-1-35.c  recursive-fibonacci-1-10.c  select-rare.c  simple-assignment-1-35.c  simple-decreasing-loop-1-35.c  simple-if-else-1-35.c  simple-if-else-reverse-1-35.c  simple-if-else-symbolic-exit.c  (+16 more)
examples/btor2/: not.btor2  ult.btor2
examples/quarc/: add.btor2  add2.btor2  and.btor2  and2.btor2  div.btor2  div2.btor2  eq82.btor2  ite.btor2  (+10 more)
examples/quarc 2/: and 2.btor2  eq 2.btor2  eq8 2.btor2  ite 2.btor2  mul 2.btor2
lion/: Makefile  branching.c  branching10.c  branching11.c  branching12.c  branching14.c  branching2.c  branching4.c  branching5.c  branching6.c  branching7.c  branching8.c  branching9.c  d.c  d.n  division-by-zero.c  division-by-zero.n  empty-unsat.c  empty-unsat.n  empty.c  empty.n  factorize_35.c  factorize_35.n  factorize_bits08.c  factorize_bits08.n  factorize_bits16.c  factorize_bits16.n  factorize_bits32.c  factorize_bits32.n  factorize_bits32easy.c  factorize_bits32easy.n  insertion-sort.c  insertion-sort1.c  insertion-sort2.c  invalid-memory-access-fail.c  invalid-memory-access-fail.n  memory-access-fail.c  microbenchmark.c  n-queen.c  n-queen.n  (+24 more)
src/: bitvec.rs  boolector.rs  bug.rs  candidate_path.rs  cfg.rs  cli.rs  compile.rs  dead_code_elimination.rs  decode.rs  disassemble.rs  elf.rs  emulate.rs  engine.rs  exploration_strategy.rs  formula_graph.rs  iterator.rs  lib.rs  main.rs  modeler.rs  rarity.rs  smt.rs  solver.rs  symbolic_state.rs  ternary.rs  util.rs  z3.rs
symbolic/: Cargo.toml  Makefile  arithmetic.c  division-by-zero-3-35.rs  if-else.c  symbolic-exit.c
tests/: cfg.rs  common.rs  disassemble.rs  elf.rs  engine.rs  environment.rs  exploration_strategy.rs  rarity.rs  smt.rs
theses/: README.md
tools/: cstar-cbmc.h  cstar-gcc.h  cstar-klee.h  cstar-lib.c  mytime.sh  sat2human.sh
unicorn_api/: Cargo.toml  README.md  pyproject.toml
unicorn_api/examples/: example_qir.py  utils.py  utils_qir.py
unicorn_api/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
(+762 files in other folders)
