[package] 
name = "unicorn-rs"
description = "Unicorn is a compiler and runtime system for quantum computing"
authors = ["Michael Starzinger <michael.starzinger@antforge.org>", "Stefanie Muroya"]
repository = "https://github.com/cksystemsgroup/unicorn"
homepage = "https://cksystemsgroup.github.io/unicorn"
license = "MIT"
categories = ["command-line-utilities", "development-tools::testing", "science", "simulation"]
keywords = ["quantum-annealing", "quantum-computing", "bounded-model-checking", "symbolic-execution", "smt", "sat"]
edition = "2018"
version ="0.4.1"

[features]
default = []
gui = ["egui", "eframe", "rfd", "indexmap"]
z3 = ["z3-solver", "z3-sys"]
boolector = ["boolector-solver", "boolector-sys"]
kissat = ["kissat-rs"]
varisat = ["varisat-rs"]
cadical = ["cadical-rs"]
true-rng = []

[lib]
name = "unicorn"
path = "src/lib.rs"

[[bin]]
name = "unicorn"
path = "src/main.rs"

[dependencies]
byteorder = "~1.5.0"
clap = { version = "~4.5.0", features = ["cargo"] }
strum = { version = "~0.26.0", features = ["derive"] }
riscu = "~0.5"
log = "~0.4.19"
regex = "~1.10.0"
env_logger = "~0.11.0"
bytesize = "~1.3.0"
anyhow = "~1.0.71"
thiserror = "~1.0.40"
pyo3 = { version = "~0.22.0", features = ["auto-initialize"] }
egui = { version = "0.27.0", optional = true }
indexmap = { version = "1.9.3", optional = true }
eframe = { version = "0.27.0", optional = true }
rfd = { version = "0.14.0", optional = true }
boolector-solver = { package = "boolector", version = "~0.4.3", features = ["vendor-lgl"], optional = true }
boolector-sys = { version = "~0.7.1", features = ["vendor-lgl"], optional = true }
z3-solver = { package = "z3", version = "~0.12.0", features = ["static-link-z3"], optional = true }
z3-sys = { version = "~0.8.0", features = ["static-link-z3"], optional = true }
kissat-rs = { git = "https://github.com/firefighterduck/kissat-rs", branch = "main", version = "0.1", optional = true }
varisat-rs = { package = "varisat", version = "0.2.2", optional = true }
cadical-rs = { package = "cadical", version = "0.1.14", optional = true }

[patch.crates-io]
# TODO: Allows us to work on `riscu` and `unicorn` in parallel. Remove
# once `riscu` stabilizes and we made another crates.io release of it.
riscu = { git = 'https://github.com/cksystemsgroup/riscu' }

[dev-dependencies]
rayon = "~1.10.0"
tempfile = "~3.10.0"
which = "~4.4"
log = "~0.4.19"
env_logger = "~0.11.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
