[package]
name = "utils"
version = "0.1.0"
authors = ["Christian Mösl <christian.moesl@live.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "~1.5.1"
tempfile = "~3.2.0"
which = "~4.1.0"
log = "~0.4.14"
env_logger = "~0.8.4"
